Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <section id="main_content" class="inner">
         <p>This is a book in progress about language definition with the Spoofax Language Workbench</p>
 
+<p>Current version of the book: <a href="https://github.com/MetaBorgCube/declare-your-language/raw/master/decl-your-lang/releases/declare-your-language.pdf">PDF</a></p>
+
 <p>Author: <a href="https://github.com/eelcovisser" class="user-mention">@eelcovisser</a></p>
 
 <p>Contributions (pull requests) are welcome.</p>
