Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This is a book in progress about language definition with the Spoofax Language Workbench</p>
+        <p>This is a book (in progress) about declarative language definition with the Spoofax Language
+Workbench.
+The aim of Spoofax is to separate the various concerns of language definition
+and implementation and provide high-level declarative meta-languages for each
+concern.
+These meta-languages are declarative in the sense that they abstract from the
+<em>how</em> of language implementation and focus on the <em>what</em> of language
+design.
+For example, 'what is the syntax of my language?', instead of 'how do I
+implement a parser for my language?'.
+Thus, a language designer should not be distracted by language implementation
+details. </p>
 
-<p>Current version of the book: <a href="https://github.com/MetaBorgCube/declare-your-language/raw/master/decl-your-lang/releases/declare-your-language.pdf">PDF</a></p>
+<p>The current version of the book: <a href="https://github.com/MetaBorgCube/declare-your-language/raw/master/decl-your-lang/releases/declare-your-language.pdf">PDF</a></p>
 
 <p>Author: <a href="https://github.com/eelcovisser" class="user-mention">@eelcovisser</a></p>
 
